// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for MonitoredServiceCategory Ensure application typee is rendered correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main monitoredServiceCategory application"
  >
    <p
      class="StyledProps--font StyledProps--main categoryName"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-primary8"
        data-icon="dashboard"
      >
        <svg
          height="13"
          viewBox="0 0 16 16"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.656 2H14v4H8.656zm0 12V7.344H14V14zM2 14v-4h5.344v4zm0-5.344V2h5.344v6.656z"
            fill="#fff"
            opacity="0.691"
          />
        </svg>
      </span>
      Application
    </p>
  </div>
</div>
`;

exports[`Unit tests for MonitoredServiceCategory Ensure infra type is rendered correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main monitoredServiceCategory infrastructure"
  >
    <p
      class="StyledProps--font StyledProps--main categoryName"
      style="display: flex; align-items: center;"
    >
      <span
        class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-purple500"
        data-icon="infrastructure"
      >
        <svg
          fill="currentColor"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 4h16v16H4z"
            opacity="0.01"
          />
          <path
            clip-rule="evenodd"
            d="M12.487 8.343a.2.2 0 00.08.17l6.287 4.692a1 1 0 01.006 1.598l-6.257 4.74a1 1 0 01-1.207.002l-6.325-4.773a1 1 0 01-.026-1.577l.664-.536a.2.2 0 01.248-.002l.207.161a.3.3 0 01-.006.479l-.593.436a.2.2 0 00-.002.32l5.618 4.253a.2.2 0 00.321-.159v-2.515L5.066 10.8a1 1 0 010-1.6l6.344-4.758a1 1 0 011.187-.01l6.408 4.646a1 1 0 01-.036 1.645l-.905.597-.482-.471a.2.2 0 01.037-.315l.747-.449a.2.2 0 00.011-.335l-5.471-3.825a.2.2 0 00-.315.155l-.104 2.263zm-.767-2.476a.2.2 0 00-.32-.16L5.972 9.775a.2.2 0 000 .32l5.753 4.346a.5.5 0 00.567.025l2.642-1.65a.2.2 0 01.233.014l.452.37a.2.2 0 01-.02.324l-3.217 2.02a.2.2 0 00-.093.17v2.468a.2.2 0 00.322.158l5.42-4.18a.2.2 0 00-.001-.318l-5.853-4.469a.2.2 0 00-.245.002l-2.438 1.92a.2.2 0 01-.258-.008l-.382-.346a.2.2 0 01.011-.305l2.78-2.186a.2.2 0 00.075-.158V5.867z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      Infrastructure
    </p>
  </div>
</div>
`;

exports[`Unit tests for MonitoredServiceCategory Ensure null type is rendered correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  />
</div>
`;
